<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ca.on.oicr.gsi.vidarr</groupId>
  <artifactId>vidarr</artifactId>
  <version>2.16.2-SNAPSHOT</version>
  <packaging>pom</packaging>
  <properties>
    <jooq.version>3.21.2</jooq.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <rest-assured.version>6.0.0</rest-assured.version>
    <swagger-core-version>1.5.18</swagger-core-version>
    <jackson3.version>3.1.3</jackson3.version>
    <jackson2.version>2.21
    </jackson2.version> <!-- jackson-annotations version bundled with jackson-bom 3.1.3: https://github.com/FasterXML/jackson-bom/blob/c2ea79e9178f0aaa5e4f381c644140357bfc307e/pom.xml#L60 -->
  </properties>
  <repositories>
    <repository>
      <id>release.gsi</id>
      <name>GSI Releases Maven Repository</name>
      <url>https://artifacts.oicr.on.ca/artifactory/gsi-release</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>snapshots.gsi</id>
      <name>GSI Releases Maven Snapshot Repository</name>
      <url>https://artifacts.oicr.on.ca/artifactory/gsi-snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>dependencies.gsi</id>
      <name>GSI Dependencies Maven Snapshot Repository</name>
      <url>https://artifacts.oicr.on.ca/artifactory/gsi-dependencies</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>tools.jackson</groupId>
        <artifactId>jackson-bom</artifactId>
        <version>${jackson3.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.undertow</groupId>
        <artifactId>undertow-core</artifactId>
        <version>2.4.0.Final</version>
      </dependency>
      <dependency>
        <groupId>org.jboss.threads</groupId>
        <artifactId>jboss-threads</artifactId>
        <version>3.5.1.Final
        </version> <!-- using the undertow-core dependency version of 3.7.0 causes a runtime error, so pin this here -->
      </dependency>
      <dependency>
        <groupId>org.jboss.logging</groupId>
        <artifactId>jboss-logging</artifactId>
	<version>3.4.2.Final</version> <!-- 3.5.x won't work due to this commit which uses MethodHandles.privateLookupIn() for logger generation, for better encapsulation, but undertow is an automatic module and assumes it can use reflection to get the logger, which it can't . https://github.com/jboss-logging/jboss-logging/commit/d8b57d2a3bcad6bb05784d1e3f33de3c366fdf57 -->
      </dependency>
      <dependency>
        <groupId>ca.on.oicr.gsi.vidarr</groupId>
        <artifactId>vidarr-pluginapi</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>ca.on.oicr.gsi.vidarr</groupId>
        <artifactId>vidarr-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.prometheus</groupId>
        <artifactId>simpleclient</artifactId>
        <version>0.16.0</version>
      </dependency>
      <dependency>
        <groupId>io.prometheus</groupId>
        <artifactId>simpleclient_common</artifactId>
        <version>0.16.0</version>
      </dependency>
      <dependency>
        <groupId>io.prometheus</groupId>
        <artifactId>simpleclient_hotspot</artifactId>
        <version>0.16.0</version>
      </dependency>
      <dependency>
        <groupId>org.jooq</groupId>
        <artifactId>jooq</artifactId>
        <version>${jooq.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jooq</groupId>
        <artifactId>jooq-meta</artifactId>
        <version>${jooq.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jooq</groupId>
        <artifactId>jooq-codegen</artifactId>
        <version>${jooq.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jooq</groupId>
        <artifactId>jooq-jackson3-extensions</artifactId>
        <version>${jooq.version}</version>
      </dependency>
      <dependency>
        <groupId>org.postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>42.7.12</version>
      </dependency>
      <dependency>
        <groupId>ca.on.oicr.gsi</groupId>
        <artifactId>server-utils</artifactId>
        <version>1.0.4</version>
      </dependency>
      <dependency>
        <groupId>info.picocli</groupId>
        <artifactId>picocli</artifactId>
        <version>4.7.4</version>
      </dependency>
      <dependency>
        <groupId>org.flywaydb</groupId>
        <artifactId>flyway-core</artifactId>
        <version>9.16.3</version>
      </dependency>
      <dependency>
        <groupId>com.zaxxer</groupId>
        <artifactId>HikariCP</artifactId>
        <version>5.0.1</version>
      </dependency>
      <dependency>
        <groupId>io.rest-assured</groupId>
        <artifactId>rest-assured</artifactId>
        <version>${rest-assured.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>io.rest-assured</groupId>
        <artifactId>json-path</artifactId>
        <version>${rest-assured.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>io.rest-assured</groupId>
        <artifactId>xml-path</artifactId>
        <version>${rest-assured.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>testcontainers</artifactId>
        <version>1.21.4</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>postgresql</artifactId>
        <version>1.21.4</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.13.2</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <distributionManagement>
    <repository>
      <id>deploy.artifacts.oicr</id>
      <name>GSI Releases</name>
      <url>https://artifacts.oicr.on.ca/artifactory/gsi-release</url>
    </repository>
    <snapshotRepository>
      <id>deploy.artifacts.oicr</id>
      <name>GSI Snapshots</name>
      <url>https://artifacts.oicr.on.ca/artifactory/gsi-snapshots</url>
    </snapshotRepository>
  </distributionManagement>
  <modules>
    <module>vidarr-pluginapi</module>
    <module>vidarr-cromwell</module>
    <module>vidarr-sh</module>
    <module>vidarr-server</module>
    <module>vidarr-core</module>
    <module>vidarr-cli</module>
    <module>vidarr-prometheus</module>
    <module>vidarr-cardea</module>
  </modules>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.15.0</version>
        <configuration>
          <source>21</source>
          <target>21</target>
          <compilerArgument>-Xlint:unchecked</compilerArgument>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.6.0</version>
        <configuration>
          <includeScope>runtime</includeScope>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.1.2</version>
      </plugin>
    </plugins>
  </build>
</project>
